--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -27,7 +27,7 @@
         android:background="@drawable/rounded_corners_search">
 
         <EditText
-            android:id="@+id/input_search_text"
+            android:id="@+id/search_input_text"
             android:layout_width="316dp"
             android:layout_height="48dp"
             android:layout_marginTop="@dimen/margin_4"
@@ -47,7 +47,7 @@
             android:textSize="@dimen/size_text_16" />
 
         <ImageView
-            android:id="@+id/clear_search_button"
+            android:id="@+id/search_clear_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="end"
@@ -57,7 +57,7 @@
     </FrameLayout>
 
     <TextView
-        android:id="@+id/count_result_search"
+        android:id="@+id/search_count_result"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
@@ -79,8 +79,19 @@
         android:layout_marginTop="228dp"
         android:src="@drawable/search_placeholder" />
 
+    <TextView
+        android:id="@+id/search_error_text"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:layout_marginTop="@dimen/margin_16"
+        android:fontFamily="@font/ys_display_medium"
+        android:textSize="@dimen/size_text_22"
+        tools:text="@string/placeholder_no_internet"
+        android:visibility="gone" />
+
     <ProgressBar
-        android:id="@+id/progress_bar"
+        android:id="@+id/search_progress_bar"
         android:layout_width="48dp"
         android:layout_height="48dp"
         android:layout_gravity="center"
@@ -92,8 +103,8 @@
         android:id="@+id/search_result"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="1"
         android:layout_marginTop="@dimen/margin_8"
+        android:layout_weight="1"
         android:visibility="gone"
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />
 </LinearLayout>
