--- a/app/src/main/res/values/dimen.xml
+++ b/app/src/main/res/values/dimen.xml
@@ -2,9 +2,11 @@
 <resources>
     <dimen name="size_text_16">16sp</dimen>
     <dimen name="size_text_22">22sp</dimen>
+    <dimen name="size_text_32">32sp</dimen>
     <dimen name="margin_4">4dp</dimen>
     <dimen name="margin_8">8dp</dimen>
     <dimen name="margin_9">9dp</dimen>
     <dimen name="margin_12">12dp</dimen>
     <dimen name="margin_16">16dp</dimen>
+    <dimen name="margin_24">24dp</dimen>
 </resources>
