--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -5,6 +5,7 @@
         <item name="android:fontFamily">@font/ys_display_medium</item>
         <item name="android:textFontWeight" tools:ignore="NewApi">500</item>
         <item name="android:textSize">@dimen/size_text_22</item>
+        <item name="android:textColor">@color/black</item>
     </style>
 
     <style name="VacancyTextStyle">
@@ -13,5 +14,14 @@
         <item name="android:fontFamily">@font/ys_display_regular</item>
         <item name="android:textSize">@dimen/size_text_16</item>
         <item name="android:textColor">@color/black</item>
+    </style>
+
+    <style name="TeamTextStyle">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_marginStart">@dimen/margin_16</item>
+        <item name="android:fontFamily">@font/ys_display_medium</item>
+        <item name="android:textColor">@color/black</item>
+        <item name="android:textSize">@dimen/size_text_16</item>
     </style>
 </resources>
