--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -76,7 +76,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:layout_marginTop="228dp"
+        android:layout_marginTop="156dp"
         android:src="@drawable/search_placeholder" />
 
     <TextView
@@ -85,6 +85,7 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:layout_marginTop="@dimen/margin_16"
+        android:textColor="@color/black"
         android:fontFamily="@font/ys_display_medium"
         android:textSize="@dimen/size_text_22"
         android:visibility="gone"
