--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -10,11 +10,8 @@
 
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/search_toolbar"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        style="@style/ToolbarStyle"
         android:paddingStart="@dimen/margin_16"
-        android:paddingEnd="@dimen/margin_12"
-        app:contentInsetStartWithNavigation="0dp"
         app:menu="@menu/filter_ic_toolbar"
         app:title="@string/title_main"
         app:titleTextAppearance="@style/TitleStyle" />
@@ -85,8 +82,8 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:layout_marginTop="@dimen/margin_16"
-        android:textColor="@color/black"
         android:fontFamily="@font/ys_display_medium"
+        android:textColor="@color/black"
         android:textSize="@dimen/size_text_22"
         android:visibility="gone"
         tools:text="@string/placeholder_no_internet" />
@@ -114,7 +111,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
-        android:visibility="gone"
+        android:layout_margin="16dp"
         android:indeterminateTint="@color/blue"
-        android:layout_margin="16dp"/>
+        android:visibility="gone" />
 </LinearLayout>
