--- a/app/src/main/res/layout/fragment_vacancy.xml
+++ b/app/src/main/res/layout/fragment_vacancy.xml
@@ -1,22 +1,192 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/white"
-    tools:context="ru.practicum.android.diploma.presentation.VacancyFragment">
+    android:background="@color/white">
 
-    <TextView
-        android:id="@+id/title"
-        android:layout_width="wrap_content"
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:gravity="center"
-        android:text="@string/title_vacancy"
-        android:textSize="50sp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:background="@color/white"
+        android:orientation="vertical"
+        tools:context="ru.practicum.android.diploma.presentation.VacancyFragment">
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+        <androidx.appcompat.widget.Toolbar
+            android:id="@+id/vacancy_toolbar"
+            style="@style/ToolbarStyle"
+            app:menu="@menu/vacancy_ic_toolbar"
+            app:navigationIcon="@drawable/ic_arrow_back_24"
+            app:title="@string/title_vacancy"
+            app:titleTextAppearance="@style/TitleStyle" />
+
+        <TextView
+            android:id="@+id/vacancy_title"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginHorizontal="@dimen/margin_16"
+            android:layout_marginTop="@dimen/margin_24"
+            android:fontFamily="@font/ys_display_bold"
+            android:textColor="@color/black"
+            android:textSize="@dimen/size_text_32"
+            tools:text="@string/text_job_vacancies_example1" />
+
+        <TextView
+            android:id="@+id/vacancy_salary"
+            style="@style/TitleStyle"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginHorizontal="@dimen/margin_16"
+            tools:text="@string/text_payday_vacancies_example" />
+
+        <FrameLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginHorizontal="@dimen/margin_16"
+            android:layout_marginTop="@dimen/margin_16"
+            android:background="@drawable/rounded_corners_search"
+            android:padding="@dimen/margin_16">
+
+            <ImageView
+                android:id="@+id/company_logo"
+                android:layout_width="@dimen/icon_size_48"
+                android:layout_height="@dimen/icon_size_48"
+                tools:src="@drawable/company_logo_example" />
+
+            <TextView
+                android:id="@+id/company_name"
+                style="@style/TitleStyle"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="56dp"
+                tools:text="@string/text_company_vacancies_example" />
+
+            <TextView
+                android:id="@+id/city"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="56dp"
+                android:layout_marginTop="26dp"
+                android:fontFamily="@font/ys_display_regular"
+                android:textColor="@color/black"
+                android:textSize="@dimen/size_text_16"
+                tools:text="@string/text_job_city_example" />
+
+        </FrameLayout>
+
+        <TextView
+            style="@style/VacancyDetailTextStyle"
+            android:layout_marginTop="@dimen/margin_24"
+            android:fontFamily="@font/ys_display_medium"
+            android:text="@string/text_required_experience" />
+
+        <TextView
+            android:id="@+id/required_experience"
+            style="@style/VacancyDetailTextStyle"
+            android:fontFamily="@font/ys_display_regular"
+            android:text="@string/text_required_experience_example" />
+
+        <TextView
+            android:id="@+id/type_employment"
+            style="@style/VacancyDetailTextStyle"
+            android:layout_marginTop="@dimen/margin_8"
+            android:fontFamily="@font/ys_display_regular"
+            tools:text="@string/text_type_employment_example" />
+
+        <TextView
+            style="@style/TitleStyle"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginHorizontal="@dimen/margin_16"
+            android:layout_marginTop="@dimen/margin_32"
+            android:text="@string/text_job_description" />
+
+        <LinearLayout
+            android:id="@+id/responsibilities"
+            style="@style/VacancyDetailStyle">
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:fontFamily="@font/ys_display_medium"
+                android:text="@string/text_responsibilities"
+                android:textColor="@color/black"
+                android:textSize="@dimen/size_text_16" />
+
+            <TextView
+                android:id="@+id/responsibilities_descriptions"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:fontFamily="@font/ys_display_regular"
+                android:textColor="@color/black"
+                android:textSize="@dimen/size_text_16"
+                tools:text="@string/text_responsibilities_example" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:id="@+id/requirements"
+            style="@style/VacancyDetailStyle">
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:fontFamily="@font/ys_display_medium"
+                android:text="@string/text_requirements"
+                android:textColor="@color/black"
+                android:textSize="@dimen/size_text_16" />
+
+            <TextView
+                android:id="@+id/requirements_descriptions"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:fontFamily="@font/ys_display_regular"
+                android:textColor="@color/black"
+                android:textSize="@dimen/size_text_16"
+                tools:text="@string/text_requirements_example" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:id="@+id/conditions"
+            style="@style/VacancyDetailStyle">
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:fontFamily="@font/ys_display_medium"
+                android:text="@string/text_conditions"
+                android:textColor="@color/black"
+                android:textSize="@dimen/size_text_16" />
+
+            <TextView
+                android:id="@+id/conditions_descriptions"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:fontFamily="@font/ys_display_regular"
+                android:textColor="@color/black"
+                android:textSize="@dimen/size_text_16"
+                tools:text="@string/text_conditions_example" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:id="@+id/key_skills"
+            style="@style/VacancyDetailStyle">
+
+            <TextView
+                style="@style/TitleStyle"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/text_key_skills" />
+
+            <TextView
+                android:id="@+id/key_skills_descriptions"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/margin_16"
+                android:fontFamily="@font/ys_display_regular"
+                android:textColor="@color/black"
+                android:textSize="@dimen/size_text_16"
+                tools:text="@string/text_key_skills_example" />
+        </LinearLayout>
+    </LinearLayout>
+</ScrollView>
