--- a/app/src/main/res/layout/vacancy_view.xml
+++ b/app/src/main/res/layout/vacancy_view.xml
@@ -8,8 +8,8 @@
 
     <ImageView
         android:id="@+id/company_logo"
-        android:layout_width="48dp"
-        android:layout_height="48dp"
+        android:layout_width="@dimen/icon_size_48"
+        android:layout_height="@dimen/icon_size_48"
         android:layout_marginStart="@dimen/margin_16"
         tools:src="@drawable/company_logo_example" />
 
