--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,9 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<resources xmlns:tools="http://schemas.android.com/tools">
+<resources>
 
     <style name="TitleStyle">
         <item name="android:fontFamily">@font/ys_display_medium</item>
-        <item name="android:textFontWeight" tools:ignore="NewApi">500</item>
         <item name="android:textSize">@dimen/size_text_22</item>
         <item name="android:textColor">@color/black</item>
     </style>
@@ -23,5 +22,27 @@
         <item name="android:fontFamily">@font/ys_display_medium</item>
         <item name="android:textColor">@color/black</item>
         <item name="android:textSize">@dimen/size_text_16</item>
+    </style>
+
+    <style name="ToolbarStyle">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:paddingEnd">@dimen/margin_12</item>
+    </style>
+
+    <style name="VacancyDetailTextStyle">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_marginStart">@dimen/margin_16</item>
+        <item name="android:textColor">@color/black</item>
+        <item name="android:textSize">@dimen/size_text_16</item>
+    </style>
+
+    <style name="VacancyDetailStyle">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_marginTop">@dimen/margin_16</item>
+        <item name="android:layout_marginHorizontal">@dimen/margin_16</item>
+        <item name="android:orientation">vertical</item>
     </style>
 </resources>
