--- a/app/src/main/res/layout/fragment_choosing_country.xml
+++ b/app/src/main/res/layout/fragment_choosing_country.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/white"
-    tools:context="ru.practicum.android.diploma.presentation.ChoosingCountryFragment">
+    tools:context="ru.practicum.android.diploma.presentation.fragment.ChoosingCountryFragment">
 
     <TextView
         android:id="@+id/title"
