--- a/app/src/main/res/layout/fragment_favorite.xml
+++ b/app/src/main/res/layout/fragment_favorite.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/white"
-    tools:context="ru.practicum.android.diploma.presentation.FavoriteFragment">
+    tools:context="ru.practicum.android.diploma.presentation.fragment.FavoriteFragment">
 
     <TextView
         style="@style/TitleStyle"
