--- a/app/src/main/res/layout/fragment_settings_filter.xml
+++ b/app/src/main/res/layout/fragment_settings_filter.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/white"
-    tools:context="ru.practicum.android.diploma.presentation.SettingsFilterFragment">
+    tools:context="ru.practicum.android.diploma.presentation.fragment.SettingsFilterFragment">
 
     <TextView
         android:id="@+id/title"
