--- a/app/src/main/res/layout/fragment_team.xml
+++ b/app/src/main/res/layout/fragment_team.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:background="@color/white"
     android:orientation="vertical"
-    tools:context="ru.practicum.android.diploma.presentation.TeamFragment">
+    tools:context="ru.practicum.android.diploma.presentation.fragment.TeamFragment">
 
     <androidx.appcompat.widget.Toolbar
         android:layout_width="match_parent"
