--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -29,6 +29,7 @@
             android:layout_height="48dp"
             android:layout_marginTop="@dimen/margin_4"
             android:background="@null"
+            android:ellipsize="end"
             android:fontFamily="@font/ys_display_regular"
             android:hint="@string/hint_enter_your_request"
             android:imeOptions="actionDone"
