--- a/app/src/main/res/values/dimen.xml
+++ b/app/src/main/res/values/dimen.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <dimen name="size_text_12">12sp</dimen>
     <dimen name="size_text_16">16sp</dimen>
     <dimen name="size_text_22">22sp</dimen>
     <dimen name="size_text_32">32sp</dimen>
@@ -7,10 +8,14 @@
     <dimen name="margin_4">4dp</dimen>
     <dimen name="margin_8">8dp</dimen>
     <dimen name="margin_9">9dp</dimen>
+    <dimen name="margin_10">10dp</dimen>
     <dimen name="margin_12">12dp</dimen>
     <dimen name="margin_16">16dp</dimen>
+    <dimen name="margin_17">17dp</dimen>
+    <dimen name="margin_18">18dp</dimen>
     <dimen name="margin_24">24dp</dimen>
     <dimen name="margin_32">32dp</dimen>
     <dimen name="corner_radius_12">12dp</dimen>
     <dimen name="icon_size_48">48dp</dimen>
+    <dimen name="button_height">59dp</dimen>
 </resources>
