--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -45,4 +45,13 @@
         <item name="android:layout_marginHorizontal">@dimen/margin_16</item>
         <item name="android:orientation">vertical</item>
     </style>
+
+    <style name="SettingsFilterTextStyle">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_marginStart">@dimen/margin_16</item>
+        <item name="android:textSize">@dimen/size_text_16</item>
+        <item name="android:fontFamily">@font/ys_display_regular</item>
+        <item name="android:textColor">@color/gray</item>
+    </style>
 </resources>
