--- a/app/src/main/res/layout/item_country_choosing.xml
+++ b/app/src/main/res/layout/item_country_choosing.xml
@@ -7,8 +7,7 @@
     android:gravity="center_vertical"
     android:paddingStart="16dp"
     android:paddingEnd="6dp"
-    android:paddingTop="6dp"
-    android:paddingBottom="6dp">
+    android:paddingVertical="6dp">
 
     <TextView
         android:id="@+id/textView"
