--- a/app/src/main/res/layout/fragment_choosing_industry.xml
+++ b/app/src/main/res/layout/fragment_choosing_industry.xml
@@ -71,6 +71,19 @@
                     android:src="@drawable/ic_search_24" />
             </FrameLayout>
 
+            <FrameLayout
+                android:id="@+id/progress_bar"
+                android:visibility="gone"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:layout_gravity="center_horizontal">
+                <ProgressBar
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:indeterminateTint="@color/blue"/>
+            </FrameLayout>
+
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/recyclerView"
                 android:layout_width="match_parent"
@@ -83,7 +96,7 @@
             </androidx.recyclerview.widget.RecyclerView>
 
             <LinearLayout
-                android:id="@+id/placeholder_list_is_empty"
+                android:id="@+id/placeholder_sever_error"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:gravity="center_horizontal"
@@ -95,10 +108,9 @@
                 app:layout_constraintTop_toTopOf="parent">
 
                 <ImageView
-                    android:id="@+id/text"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:src="@drawable/list_is_empty" />
+                    android:src="@drawable/error_server" />
 
                 <TextView
                     android:id="@+id/search_error1"
@@ -108,11 +120,11 @@
                     android:fontFamily="@font/ys_display_medium"
                     android:textColor="@color/black"
                     android:textSize="@dimen/size_text_22"
-                    tools:text="@string/placeholder_list_is_empty" />
+                    tools:text="@string/error_server" />
             </LinearLayout>
 
             <LinearLayout
-                android:id="@+id/placeholder_vacancy_error"
+                android:id="@+id/placeholder_no_internet"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:gravity="center_horizontal"
@@ -124,10 +136,9 @@
                 app:layout_constraintTop_toTopOf="parent">
 
                 <ImageView
-                    android:id="@+id/text1"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:src="@drawable/not_find_vacancy_placeholder" />
+                    android:src="@drawable/no_internet_placeholder" />
 
                 <TextView
                     android:id="@+id/search_error2"
@@ -137,7 +148,7 @@
                     android:fontFamily="@font/ys_display_medium"
                     android:textColor="@color/black"
                     android:textSize="@dimen/size_text_22"
-                    tools:text="@string/placeholder_no_industry" />
+                    tools:text="@string/error_no_internet" />
             </LinearLayout>
         </LinearLayout>
     </ScrollView>
