--- a/app/src/main/res/layout/fragment_settings_filter.xml
+++ b/app/src/main/res/layout/fragment_settings_filter.xml
@@ -45,18 +45,43 @@
         android:background="@color/white">
 
         <TextView
+            android:id="@+id/industry_hint"
+            android:visibility="gone"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="@dimen/margin_16"
+            android:textColor="@color/black"
+            android:fontFamily="@font/ys_display_regular"
+            android:textSize="@dimen/size_text_12"
+            android:text="@string/hint_industry" />
+
+        <TextView
             android:id="@+id/selected_industry_text"
             style="@style/SettingsFilterTextStyle"
             android:layout_marginVertical="20.5dp"
+            android:singleLine="true"
+            android:maxLines="1"
+            android:ellipsize="end"
             android:text="@string/hint_industry" />
 
         <ImageView
+            android:id="@+id/image_industry"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="end"
             android:layout_marginVertical="@dimen/margin_18"
             android:layout_marginEnd="@dimen/margin_8"
             android:src="@drawable/ic_arrow_forward_24" />
+
+        <ImageView
+            android:visibility="gone"
+            android:id="@+id/image_industry_clear"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="end"
+            android:layout_marginVertical="@dimen/margin_18"
+            android:layout_marginEnd="@dimen/margin_8"
+            android:src="@drawable/ic_close_24" />
     </FrameLayout>
 
     <FrameLayout
@@ -146,11 +171,11 @@
         android:layout_marginHorizontal="@dimen/margin_17"
         android:layout_marginTop="@dimen/margin_8"
         android:layout_marginBottom="@dimen/margin_24"
+        android:background="@color/white"
         android:fontFamily="@font/ys_display_medium"
+        android:stateListAnimator="@null"
         android:text="@string/button_reset"
         android:textAllCaps="false"
         android:textColor="@color/red"
-        android:background="@color/white"
-        android:stateListAnimator="@null"
         android:textSize="@dimen/size_text_16" />
 </LinearLayout>
