--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -47,7 +47,7 @@
     </style>
 
     <style name="SettingsFilterTextStyle">
-        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_width">350dp</item>
         <item name="android:layout_height">wrap_content</item>
         <item name="android:layout_marginStart">@dimen/margin_16</item>
         <item name="android:textSize">@dimen/size_text_16</item>
